no section is completed just saving codes

--- a/index.html
+++ b/index.html
@@ -29,105 +29,200 @@
       .font-Manrope {
         font-family: "Manrope", sans-serif;
       }
-      .main-color{
+      .main-color {
         color: rgb(33, 33, 33);
       }
     </style>
   </head>
   <body class="font-Manrope main-color">
     <!-- header section  -->
-    <header
-      class="bg-gradient-to-b from-gray-200 to-white"
-      
-    > 
-    <!-- container  -->
-     <div class="container mx-auto pb-8 md:pb-12 lg:pb-16">
-      <!-- nav bar  -->
-      <nav class="pt-2">
-        <div class="navbar flex justify-between">
-          <div class="md:flex-1">
-            <div>
-              <i
-                class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-lime-300 p-2 "
-              ></i>
-            </div>
-            <div>
-              <a class="text-2xl font-extrabold p-1">Rinterio</a>
-            </div>
-          </div>
-          <div class="hidden lg:flex">
-            <ul class="menu menu-horizontal px-1">
-              <li class="font-bold"><a>Home</a></li>
-              <li><a class="text-gray-500">Services</a></li>
-              <li><a class="text-gray-500">Portfolio</a></li>
-              <li><a class="text-gray-500">Blogs</a></li>
-              <li><a class="text-gray-500">Contact Us</a></li>
-            </ul>
-          </div>
-
-          <div class="space-x-2 hidden md:flex">
-            <div>
-              <a href="#search"
-                ><i
-                  class="fa-solid text-gray-500  fa-magnifying-glass p-3 rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm"
-                ></i
-              ></a>
-            </div>
-            <div>
-              <a href="#cart"><i
-                class="fa-solid fa-cart-shopping p-3 text-gray-500  rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm"
-              ></i></a>
-            </div>
-            <div>
+    <header class="lg:px-20 bg-gradient-to-b from-gray-200 to-white">
+      <!-- container  -->
+      <div class="container mx-auto pb-6 md:pb-10 lg:pb-16">
+        <!-- nav bar  -->
+        <nav class="pt-5">
+          <div class="navbar flex justify-between">
+            <div class="md:flex-1">
               <div>
-                <a class="btn bg-lime-300 rounded-3xl font-extrabold border-0 hover:bg-lime-400 shadow-sm"
-                  >Book Consult
-                  <div class="rounded-full text-lime-300 bg-black hover:bg-slate-700 p-2">
-                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
-                  </div>
-                </a>
+                <i
+                  class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-lime-300 p-2"
+                ></i>
+              </div>
+              <div>
+                <a class="text-2xl font-extrabold p-1">Rinterio</a>
               </div>
             </div>
-          </div>
-          <div class="dropdown dropdown-bottom dropdown-end lg:hidden">
-            <div tabindex="0" role="button" class="btn btn-ghost">
-              <i class="fa-solid fa-bars p-3 text-gray-500  rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm "></i>
+            <div class="hidden lg:flex">
+              <ul class="menu menu-horizontal px-1">
+                <li class="font-bold"><a>Home</a></li>
+                <li><a class="text-gray-500">Services</a></li>
+                <li><a class="text-gray-500">Portfolio</a></li>
+                <li><a class="text-gray-500">Blogs</a></li>
+                <li><a class="text-gray-500">Contact Us</a></li>
+              </ul>
             </div>
-            <ul
-              tabindex="0"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 p-2 shadow"
-            >
-              <li class="font-bold"><a>Home</a></li>
-              <li><a class="text-gray-500">Services</a></li>
-              <li><a class="text-gray-500">Portfolio</a></li>
-              <li><a class="text-gray-500">Blogs</a></li>
-              <li><a class="text-gray-500">Contact Us</a></li>
-            </ul>
+
+            <div class="space-x-2 hidden md:flex">
+              <div>
+                <a href="#search"
+                  ><i
+                    class="fa-solid text-gray-500 fa-magnifying-glass p-3 rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm"
+                  ></i
+                ></a>
+              </div>
+              <div>
+                <a href="#cart"
+                  ><i
+                    class="fa-solid fa-cart-shopping p-3 text-gray-500 rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm"
+                  ></i
+                ></a>
+              </div>
+              <div>
+                <div>
+                  <a
+                    class="btn bg-lime-300 rounded-3xl font-extrabold border-0 hover:bg-lime-400 shadow-sm"
+                    >Book Consult
+                    <div
+                      class="rounded-full text-lime-300 bg-black hover:bg-slate-700 p-2"
+                    >
+                      <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="dropdown dropdown-bottom dropdown-end lg:hidden">
+              <div tabindex="0" role="button" class="btn btn-ghost">
+                <i
+                  class="fa-solid fa-bars p-3 text-gray-500 rounded-full border border-gray-300 bg-white active:scale-95 hover:bg-gray-50 shadow-sm"
+                ></i>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 p-2 shadow"
+              >
+                <li class="font-bold"><a>Home</a></li>
+                <li><a class="text-gray-500">Services</a></li>
+                <li><a class="text-gray-500">Portfolio</a></li>
+                <li><a class="text-gray-500">Blogs</a></li>
+                <li><a class="text-gray-500">Contact Us</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
-      <!-- banner section  -->
-      <div class="my-5 md:mt-10 md:mb-16 lg:mb-2 text-center">
-        <div><img src="images/banner.png" alt="house" class="mx-auto lg:w-6/12 md:w-7/12 w-8/12" /></div>
-        <div class="w-fit">
-          <h1 class="lg:text-5xl text-2xl md:text-4xl font-extrabold lg:px-8 md:px-4 px-2 pt-3 md:mt-5">A barn house of this design has a striking appearance</h1>
-          <p class="lg:px-14 md:px-10 px-5 py-5 md:py-6 lg:py-10 text-gray-500 font-bold">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+        </nav>
+        <!-- banner section  -->
+        <div class="my-5 md:mt-10 md:mb-16 lg:mb-2 text-center">
           <div>
-            <a class="btn bg-lime-200 hover:bg-lime-300 rounded-3xl font-extrabold"
-              >View Details
-              <div class="rounded-full main-color bg-lime-300 p-2">
-                <i class="fa-solid fa-arrow-right -rotate-45 "></i>
-              </div>
-            </a>
+            <img
+              src="images/banner.png"
+              alt="house"
+              class="mx-auto lg:w-6/12 md:w-7/12 w-8/12"
+            />
+          </div>
+          <div class="w-fit">
+            <h1
+              class="lg:text-5xl text-2xl md:text-4xl font-extrabold lg:px-8 md:px-4 px-2 pt-3 md:mt-5"
+            >
+              A barn house of this design has a striking appearance
+            </h1>
+            <p
+              class="lg:px-14 md:px-10 px-5 py-5 md:py-6 lg:py-10 text-gray-500 font-bold"
+            >
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents, and large windows that flood the space with natural
+              light.
+            </p>
+            <div>
+              <a
+                class="btn bg-lime-200 hover:bg-lime-300 rounded-3xl font-extrabold"
+                >View Details
+                <div class="rounded-full main-color bg-lime-300 p-2">
+                  <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-      
     </header>
 
     <!-- main section  -->
-    <main></main>
+    <main>
+      <!-- thought process container -->
+      <div class="bg-gray-200 lg:px-20">
+        <!-- thoughtful design  -->
+        <div class="container mx-auto lg:gap-8 lg:pb-20">
+          <!-- text item -->
+          <div class="relative space-y-5">
+            <!-- arrow img -->
+            <div class="absolute top-5 -left-10">
+              <img
+                src="images/Vector.png"
+                alt="arrow sign"
+                class="lg:top-3 lg:flex hidden rotate-12"
+              />
+            </div>
+            <!-- text title  -->
+            <div class="text-center lg:text-start lg:pt-20 space-y-5">
+              <button class="btn rounded-full bg-white font-extrabold">
+                <i class="fa-solid fa-arrow-right"></i> About Us
+              </button>
+              <h1 class="lg:text-4xl text-xl md:text-3xl font-extrabold">
+                We design thoughtful, liveable spaces
+              </h1>
+              <p class="text-gray-500 font-bold">
+                The barn house enchants with a perfect fusion of timeless
+                elegance and contemporary comfort, offering a unique retreat
+                with every modern amenity.
+              </p>
+            </div>
+            <!-- text card -->
+            <div class="flex bg-white rounded-lg p-4 gap-3">
+              <div>
+                <img src="images/commercial.png" alt="commercial img" />
+              </div>
+              <div>
+                <h1 class="lg:text-3xl text-lg md:text-2xl font-bold">
+                  Commercial
+                </h1>
+                <p class="text-gray-500 font-bold">
+                  Our house impresses with its seamless blend of historic
+                  character and cutting-edge facilities, tailored for your
+                  business needs.
+                </p>
+              </div>
+            </div>
+            <div class="flex bg-white rounded-lg p-4 gap-3">
+              <div>
+                <img src="images/residential.png" alt="residential img" />
+              </div>
+              <div>
+                <h1 class="lg:text-3xl text-lg md:text-2xl font-bold">
+                  Residential
+                </h1>
+                <p class="text-gray-500 font-bold">
+                  The barn house welcomes you with a warm ambiance and modern
+                  conveniences, creating a peaceful sanctuary to call home.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- images item  -->
+          <div class="lg:pt-20">
+            <div>
+              <img
+                src="images/Rectangle.png"
+                alt="house"
+                class="rounded-lg lg:h-full md:h-1/2"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- work process  -->
+        <div></div>
+      </div>
+    </main>
 
     <!-- footer section  -->
     <footer></footer>
