thoughtful design section done

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
       <!-- thought process container -->
       <div class="bg-gray-200 lg:px-20">
         <!-- thoughtful design  -->
-        <div class="container mx-auto lg:gap-8 lg:pb-20">
+        <div class="container mx-auto px-5 lg:gap-8 lg:pb-20 md:pb-16 pb-10 pt-10 md:pt-16 lg:pt-20 grid lg:grid-cols-2">
           <!-- text item -->
-          <div class="relative space-y-5">
+          <div class="relative space-y-5 ">
             <!-- arrow img -->
-            <div class="absolute top-5 -left-10">
+            <div class="absolute -top-14 -left-20">
               <img
                 src="images/Vector.png"
                 alt="arrow sign"
-                class="lg:top-3 lg:flex hidden rotate-12"
+                class="lg:flex hidden rotate-12"
               />
             </div>
             <!-- text title  -->
-            <div class="text-center lg:text-start lg:pt-20 space-y-5">
+            <div class="text-center lg:text-start space-y-5">
               <button class="btn rounded-full bg-white font-extrabold">
                 <i class="fa-solid fa-arrow-right"></i> About Us
               </button>
@@ -178,7 +178,7 @@
               </p>
             </div>
             <!-- text card -->
-            <div class="flex bg-white rounded-lg p-4 gap-3">
+            <div class="flex bg-white rounded-xl p-4 gap-3">
               <div>
                 <img src="images/commercial.png" alt="commercial img" />
               </div>
@@ -193,7 +193,7 @@
                 </p>
               </div>
             </div>
-            <div class="flex bg-white rounded-lg p-4 gap-3">
+            <div class="flex bg-white rounded-xl p-4 gap-3">
               <div>
                 <img src="images/residential.png" alt="residential img" />
               </div>
@@ -209,13 +209,9 @@
             </div>
           </div>
           <!-- images item  -->
-          <div class="lg:pt-20">
-            <div>
-              <img
-                src="images/Rectangle.png"
-                alt="house"
-                class="rounded-lg lg:h-full md:h-1/2"
-              />
+          <div class="pt-5 md:pt-10">
+            <div class="rounded-xl  w-full h-64 md:h-96 lg:h-full bg-[url('images/Rectangle.png')] bg-cover bg-no-repeat bg-center">
+            
             </div>
           </div>
         </div>
